# cowp

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/plans/: codex-opencode-workerpool-v2.3-phased-workflow-hardening-plan.md  codex-opencode-workerpool-v2.4-task-kind-plan.md  codex-opencode-workerpool-v2.5.0-git-controller-serial-plan.md  codex-opencode-workerpool-v2.5.1-svn-git-sync-gate-plan.md  codex-opencode-workerpool-v2.5.2-svn-git-prepublish-gate-plan.md  codex-opencode-workerpool-v2.6-review-loop-plan.md  codex-opencode-workerpool-v2.7-final-review-loop-plan.md  codex-opencode-workerpool-v2.8-codex-skill-plan.md
skills/cowp-workerpool/: SKILL.md
skills/cowp-workerpool/agents/: openai.yaml
skills/cowp-workerpool/references/: commands.md  review-gates.md  troubleshooting.md  workflow.md
src/cowp/: __init__.py  __main__.py  backlog.py  cli.py  config.py  final_review.py  gitops.py  planning.py  queries.py  review_loop.py  runner.py  server.py  state.py  svngit.py
src/cowp/templates/: FEATURE_PLAN_TEMPLATE.md  PLANNING_PROTOCOL.md  RUNBOOK.md  TASK_TEMPLATE.md  WORKER_PROTOCOL.md
templates/: FEATURE_PLAN_TEMPLATE.md  PLANNING_PROTOCOL.md  RUNBOOK.md  TASK_PROMPT.md  TASK_TEMPLATE.md
tests/: conftest.py  test_backlog.py  test_config.py  test_final_review.py  test_integration.py  test_planning.py  test_review_loop.py  test_server.py  test_skill_package.py  test_state.py  test_svngit.py
